<resources>
    <string name="app_name">Fullcasas</string>
    <string name="app_version">Version 1.1.0</string>

    <string name="inicio">Inicio</string>
    <string name="empresas">Empresas</string>
    <string name="avisos">Avisos</string>

    <string name="lostconnection">Conexion perdida intente de nuevo</string>

    <string name="empresa_name">OPENRED BOLIVIA</string>
    <string name="empresa_info">Empresa dedicada al desarrollo de Software y Marketing Online</string>
    <string name="empresa_info_direccion">Plaza 25 de mayo N° 25 Multicentro Céspedes Of. 212</string>
    <string name="empresa_info_telf">46410244 - 73417177</string>
    <string name="empresa_info_correo">info@openredbolivia.com</string>
    <string name="empresa_info_web">www.openredbolivia.com</string>

    <string name="texto_presentacion">Bienvenidos a la red inmobiliarias de Bolivia</string>

    <string name="buscar">Buscar</string>
    <string name="info">Informacion</string>
    <string name="Login">Iniciar sesión</string>
    <string name="setting">Configuración</string>
    <string name="noresul_text">Oh no, No hay resultado</string>
    <string name="save_empresa">activity.empresa</string>

    <string-array name="array_departamento">
        <item>Departamento</item>
        <item>Beni</item>
        <item>Chuquisaca</item>
        <item>Cochabamba</item>
        <item>La Paz</item>
        <item>Oruro</item>
        <item>Pando</item>
        <item>Potosi</item>
        <item>Santa Cruz</item>
        <item>Tarija</item>
    </string-array>

    <string-array name="array_numeros">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="filtrar">filtrar</string>
    <string name="departamentos">Selecciona un Deparatamento</string>

</resources>
