<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/iv_logo_info"
        android:src="@drawable/ic_openred_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"/>

    <TextView
        android:text="@string/empresa_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_empresa_name"
        style="@style/SubTitulo_2"
        android:textColor="@color/colorAccent"
        android:gravity="center"
        android:maxLines="2"
        android:layout_alignTop="@+id/iv_logo_info"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/iv_logo_info"
        android:layout_toEndOf="@+id/iv_logo_info"
        android:layout_above="@+id/scrollView2" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/iv_logo_info"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:id="@+id/scrollView2">

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView

            android:text="@string/empresa_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_empresa_info"
            style="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
            android:gravity="center"
            android:layout_marginBottom="32dp"/>

        <TextView
            android:id="@+id/tv_direc"
            android:layout_below="@+id/tv_empresa_info"
            android:text="Direc:"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Contenido"/>

        <TextView
            android:id="@+id/tv_empresa_direc"
            android:text="@string/empresa_info_direccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Contenido"
            android:layout_alignLeft="@+id/tv_empresa_correo"
            android:layout_below="@+id/tv_empresa_info" />

        <TextView
            android:id="@+id/tv_telf"
            android:layout_below="@+id/tv_empresa_direc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Telf:"
            style="@style/Contenido"/>

        <TextView
            android:id="@+id/tv_empresa_telf"
            android:layout_below="@+id/tv_empresa_direc"
            android:layout_toRightOf="@+id/tv_telf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/empresa_info_telf"
            style="@style/Contenido"
            android:layout_alignLeft="@+id/tv_empresa_correo"/>

        <TextView
            android:id="@+id/tv_correo"
            android:layout_below="@+id/tv_telf"
            android:text="Correo:"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Contenido"
            android:autoLink="email"/>

        <TextView
            android:id="@+id/tv_empresa_correo"
            android:layout_below="@+id/tv_telf"
            android:layout_toRightOf="@+id/tv_correo"
            android:text="@string/empresa_info_correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Contenido"
            android:autoLink="email"
            android:layout_marginStart="8dp"/>

        <TextView
            android:id="@+id/tv_empresa_web"
            android:layout_below="@+id/tv_empresa_correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/empresa_info_web"
            android:gravity="center"
            android:autoLink="web"
            android:layout_marginTop="72dp"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/tv_app_version"
            android:layout_below="@id/tv_empresa_web"
            android:text="@string/app_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"/>

        <TextView
            android:layout_below="@+id/tv_empresa_web"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"/>

    </RelativeLayout>

    </ScrollView>

    <Button
        android:text="OK"
        android:textSize="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bt_ok_info"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>


</RelativeLayout>